fix: letter spacing for accordion

--- a/src/app/careers/_components/Form/index.module.scss
+++ b/src/app/careers/_components/Form/index.module.scss
@@ -22,7 +22,7 @@
 .license {
   @include fonts.text(14px, 18px, 400);
 
-  max-width: 280px;
+  max-width: 270px;
   margin-right: auto;
   color: var(--color-text-secondary);
   margin-bottom: 32px;
